--- a/portfolio/src/data/projects.json
+++ b/portfolio/src/data/projects.json
@@ -2,10 +2,11 @@
     {
       "title": "Project A",
       "imageSrc": "projects/project.png",
-      "description": "This is a project made to learn prototype.",
-      "skills": ["Figma"],
+      "description": "This is a project made to learn the latest languages by building a prototype.",
+      "skills": ["Figma","Html", "CSS"],
       "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "source": "https://www.figma.com"
+      
     },
     {
       "title": "Project B",
@@ -18,8 +19,8 @@
     {
       "title": "Project C",
       "imageSrc": "projects/project.png",
-      "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "vitejs"],
+      "description": "This is a project made to learn the latest languages by building a portfolio.",
+      "skills": ["React", "Vitejs","Html", "CSS"],
       "demo": "https://www.example.com",
       "source": "https://www.github.com"
     }
